[package]
name = "slasher"
version = "0.1.0"
authors = ["Michael Sproul <michael@sigmaprime.io>"]
edition = { workspace = true }

[features]
default = ["lmdb"]
mdbx = ["dep:mdbx"]
lmdb = ["lmdb-rkv", "lmdb-rkv-sys"]

[dependencies]
bincode = { workspace = true }
byteorder = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
flate2 = { version = "1.0.14", features = ["zlib"], default-features = false }
lazy_static = { workspace = true }
lighthouse_metrics = { workspace = true }
filesystem = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
safe_arith = { workspace = true }
serde = { workspace = true }
serde_derive = "1.0"
slog = { workspace = true }
sloggers = { workspace = true }
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }
types = { workspace = true }
strum = { workspace = true }

# MDBX is pinned at the last version with Windows and macOS support.
mdbx = { package = "libmdbx", git = "https://github.com/sigp/libmdbx-rs", tag = "v0.1.4", optional = true }
lmdb-rkv = { git = "https://github.com/sigp/lmdb-rs", rev = "f33845c6469b94265319aac0ed5085597862c27e", optional = true }
lmdb-rkv-sys = { git = "https://github.com/sigp/lmdb-rs", rev = "f33845c6469b94265319aac0ed5085597862c27e", optional = true }

[dev-dependencies]
maplit = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
logging = { workspace = true }

