[package]
name = "validator_client"
version = "0.3.5"
authors = ["Paul Hauner <paul@paulhauner.com>", "Age Manning <Age@AgeManning.com>", "Luke Anderson <luke@lukeanderson.com.au>"]
edition = { workspace = true }

[lib]
name = "validator_client"
path = "src/lib.rs"

[dev-dependencies]
tokio = { workspace = true }

[dependencies]
tree_hash = { workspace = true }
clap = { workspace = true }
slashing_protection = { workspace = true }
slot_clock = { workspace = true }
types = { workspace = true }
safe_arith = { workspace = true }
serde = { workspace = true }
serde_derive = "1.0.116"
bincode = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
directory = { workspace = true }
lockfile = { workspace = true }
environment = { workspace = true }
parking_lot = { workspace = true }
exit-future = { workspace = true }
filesystem = { workspace = true }
hex = { workspace = true }
deposit_contract = { workspace = true }
bls = { workspace = true }
eth2 = { workspace = true }
tempfile = { workspace = true }
validator_dir = { workspace = true }
clap_utils = { workspace = true }
eth2_keystore = { workspace = true }
account_utils = { workspace = true }
lighthouse_version = { workspace = true }
warp_utils = { workspace = true }
warp = { workspace = true }
hyper = { workspace = true }
ethereum_serde_utils = { workspace = true }
libsecp256k1 = { workspace = true }
ring = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
lighthouse_metrics = { workspace = true }
lazy_static = { workspace = true }
itertools = { workspace = true }
monitoring_api = { workspace = true }
sensitive_url = { workspace = true }
task_executor = { workspace = true }
reqwest = { workspace = true, features = ["native-tls"] }
url = { workspace = true }
malloc_utils = { workspace = true }
sysinfo = { workspace = true }
system_health = { path = "../common/system_health" }
logging = { workspace = true }
