[package]
name = "validator_client"
version = "0.3.5"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
edition = { workspace = true }

[lib]
name = "validator_client"
path = "src/lib.rs"

[dev-dependencies]
tokio = { workspace = true }
itertools = { workspace = true }

[dependencies]
account_utils = { workspace = true }
beacon_node_fallback = { workspace = true }
clap = { workspace = true }
clap_utils = { workspace = true }
directory = { workspace = true }
doppelganger_service = { workspace = true }
dirs = { workspace = true }
eth2 = { workspace = true }
environment = { workspace = true }
graffiti_file = { workspace = true }
hyper = { workspace = true }
initialized_validators = { workspace = true }
lighthouse_metrics = { workspace = true }
monitoring_api = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
sensitive_url = { workspace = true }
slashing_protection = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
slot_clock = { workspace = true }
types  = { workspace = true }
validator_http_api = { workspace = true }
validator_http_metrics = { workspace = true }
validator_metrics = { workspace = true }
validator_services = { workspace = true }
validator_store = { workspace = true }
tokio = { workspace = true }
fdlimit = "0.3.0"
