[package]
name = "validator_manager"
version = "0.1.0"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls = { workspace = true }
clap = { workspace = true }
types = { workspace = true }
environment = { workspace = true }
eth2_network_config = { workspace = true }
clap_utils = { workspace = true }
eth2_wallet = { workspace = true }
eth2_keystore = { workspace = true }
account_utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ethereum_serde_utils = { workspace = true }
tree_hash = { workspace = true }
eth2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
regex = { workspace = true }
validator_client = { workspace = true }
