[package]
name = "chain"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]

[dependencies]
bls = { path = "../utils/bls" }
db = { path = "../../lighthouse/db" }
ssz_helpers = { path = "../utils/ssz_helpers" }
types = { path = "../types" }
validation = { path = "../validation" }
validator_induction = { path = "../validator_induction" }
validator_shuffling = { path = "../validator_shuffling" }
