[package]
name = "ethbloom"
version = "0.5.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Ethereum bloom filter"
license = "MIT"
documentation = "https://docs.rs/ethbloom"
homepage = "https://github.com/paritytech/primitives"
repository = "https://github.com/paritytech/primitives"

[dependencies]
tiny-keccak = "1.4"
crunchy = { version = "0.1.6", features = ["limit_256"] }
fixed-hash = { version = "0.2", default_features = false }
ethereum-types-serialize = { version = "0.2.1", path = "../serialize", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
rand = { version = "0.4" }
hex-literal = "0.1.1"

[features]
default = ["std", "heapsizeof", "serialize", "fixed-hash/libc"]
std = ["fixed-hash/std"]
heapsizeof = ["fixed-hash/heapsizeof"]
serialize = ["std", "ethereum-types-serialize", "serde"]
