[package]
name = "genesis"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2018"

[dependencies]
bls = { path = "../utils/bls"  }
bls-aggregates = { git = "https://github.com/sigp/signature-schemes" }
spec = { path = "../spec"  }
ssz = { path = "../utils/ssz" }
types = { path = "../types"  }
validator_induction = { path = "../validator_induction"  }
validator_shuffling = { path = "../validator_shuffling"  }
