[package]
name = "types"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2018"

[dependencies]
bls = { path = "../utils/bls" }
boolean-bitfield = { path = "../utils/boolean-bitfield" }
hashing = { path = "../utils/hashing" }
ethereum-types = { path = "../ethereum-types" }
rand = "0.5.5"
ssz = { path = "../utils/ssz" }
