[package]
name = "builder_client"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sean Anderson <sean@sigmaprime.io>"]

[dependencies]
reqwest = { workspace = true }
sensitive_url = { workspace = true }
eth2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lighthouse_version = { workspace = true }
