[package]
name = "common"
version = "0.1.0"
authors = ["Age Manning <Age@AgeManning.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
dirs = "2.0.1"
clap = "2.32.0"
ctrlc = { version = "3.1.1", features = ["termination"] }
error-chain = "0.12.0"
exit-future = "0.1.3"
fnv = "1.0.6"
futures = "0.1.25"
hex = "0.3"
rand = "0.7"
parking_lot = "0.7"
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "^1.0"
slog = { version = "^2.4.1" , features = ["max_level_trace"] }
smallvec = "0.6.10"
slog-async = "^2.3.0"
slog-json = "^2.3"
slog-term = "2.4.1"
sloggers = { version = "^0.3" }
tokio = "0.1.16"
tokio-timer = "0.2.10"
tokio-io-timeout = "0.3.1"
tokio-io = "0.1.12"
url = "1.2"
